--- a/environment.yml
+++ b/environment.yml
@@ -19,25 +19,32 @@ dependencies:
   - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
   - blinker=1.6.1=pyhd8ed1ab_0
   - brotlipy=0.7.0=py37hcc03f2d_1004
-  - ca-certificates=2023.01.10=haa95532_0
+  - bzip2=1.0.8=h8ffe710_4
+  - ca-certificates=2022.12.7=h5b45459_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
-  - certifi=2022.12.7=py37haa95532_0
+  - certifi=2022.12.7=pyhd8ed1ab_0
   - cffi=1.15.1=py37ha95fbe2_1
   - click=8.1.3=py37h03978a9_0
   - colorama=0.4.6=pyhd8ed1ab_0
   - cryptography=38.0.2=py37h7375b12_1
   - debugpy=1.6.3=py37hf2a7229_0
   - decorator=5.1.1=pyhd8ed1ab_0
+  - eigen=3.4.0=h2d74725_0
   - entrypoints=0.4=pyhd8ed1ab_0
   - flatbuffers=23.3.3=h63175ca_0
   - frozenlist=1.3.1=py37hcc03f2d_0
   - gast=0.4.0=pyh9f0ad1d_0
+  - gettext=0.21.1=h5728263_0
   - giflib=5.2.1=h64bf75a_3
+  - glib=2.74.1=h12be248_1
+  - glib-tools=2.74.1=h12be248_1
   - google-auth=1.35.0=pyh6c4a22f_0
   - google-auth-oauthlib=0.4.6=pyhd8ed1ab_0
   - google-pasta=0.2.0=pyh8c360ce_0
   - grpcio=1.42.0=py37hc60d5dd_0
+  - gst-plugins-base=1.18.5=h9e645db_0
+  - gstreamer=1.18.5=hd78058f_0
   - h5py=3.7.0=nompi_py37h24adfc3_101
   - hdf5=1.12.2=nompi_h2a0e4a3_101
   - icu=58.2=ha925a31_3
@@ -53,19 +60,29 @@ dependencies:
   - keras-applications=1.0.8=py_1
   - keras-preprocessing=1.1.2=pyhd8ed1ab_0
   - krb5=1.20.1=h6609f42_0
+  - lerc=4.0.0=h63175ca_0
   - libaec=1.0.6=h63175ca_1
   - libblas=3.9.0=16_win64_mkl
   - libcblas=3.9.0=16_win64_mkl
+  - libclang=12.0.0=default_h627e005_2
   - libcurl=7.88.1=h68f0423_1
-  - libhwloc=2.9.0=h51c2c0f_0
+  - libdeflate=1.17=hcfcfb64_0
+  - libffi=3.4.2=h8ffe710_5
+  - libglib=2.74.1=he8f3873_1
   - libiconv=1.17=h8ffe710_0
   - liblapack=3.9.0=16_win64_mkl
+  - libogg=1.3.4=h8ffe710_1
   - libpng=1.6.39=h19919ed_0
   - libprotobuf=3.20.3=h12be248_0
   - libsodium=1.0.18=h8d14728_1
   - libsqlite=3.40.0=hcfcfb64_0
   - libssh2=1.10.0=h680486a_3
-  - libxml2=2.10.4=hc3477c8_0
+  - libtiff=4.5.0=hf8721a0_2
+  - libvorbis=1.3.7=h0e60522_0
+  - libwebp=1.2.4=hbc33d0d_1
+  - libwebp-base=1.2.4=h2bbff1b_1
+  - libxml2=2.9.14=hc3477c8_4
+  - libxslt=1.1.35=h2bbff1b_0
   - libzlib=1.2.13=hcfcfb64_4
   - m2w64-gcc-libgfortran=5.3.0=6
   - m2w64-gcc-libs=5.3.0=7
@@ -76,14 +93,17 @@ dependencies:
   - matplotlib-inline=0.1.6=pyhd8ed1ab_0
   - mkl=2022.1.0=h6a75c08_874
   - msys2-conda-epoch=20160418=1
+  - mtcnn=0.1.1=pyhd8ed1ab_0
   - multidict=6.0.2=py37hcc03f2d_1
   - nest-asyncio=1.5.6=pyhd8ed1ab_0
   - numpy=1.21.6=py37h2830a78_0
   - oauthlib=3.2.2=pyhd8ed1ab_0
-  - openssl=1.1.1t=h2bbff1b_0
+  - opencv=4.6.0=py37h104de81_2
+  - openssl=1.1.1t=hcfcfb64_0
   - opt_einsum=3.3.0=pyhd8ed1ab_1
   - packaging=23.0=pyhd8ed1ab_0
   - parso=0.8.3=pyhd8ed1ab_0
+  - pcre2=10.40=h17e33f8_0
   - pickleshare=0.7.5=py_1003
   - pip=23.0.1=pyhd8ed1ab_0
   - prompt-toolkit=3.0.38=pyha770c72_0
@@ -104,7 +124,11 @@ dependencies:
   - python_abi=3.7=3_cp37m
   - pyu2f=0.1.5=pyhd8ed1ab_0
   - pywin32=303=py37hcc03f2d_0
+  - pyyaml=6.0=py37hcc03f2d_4
   - pyzmq=24.0.1=py37h7347f05_0
+  - qt-main=5.15.2=he8e5bd7_7
+  - qt-webengine=5.15.9=hb9a9bb5_5
+  - qtwebkit=5.212=h3ad3cdb_4
   - requests=2.28.2=pyhd8ed1ab_1
   - requests-oauthlib=1.3.1=pyhd8ed1ab_0
   - rsa=4.9=pyhd8ed1ab_0
@@ -113,7 +137,7 @@ dependencies:
   - six=1.16.0=pyh6c4a22f_0
   - snappy=1.1.10=hfb803bf_0
   - sqlite=3.40.0=hcfcfb64_0
-  - tbb=2021.8.0=h91493d7_0
+  - tbb=2021.8.0=h59b6b97_0
   - tensorboard=2.10.0=py37haa95532_0
   - tensorboard-data-server=0.6.0=py37h03978a9_2
   - tensorboard-plugin-wit=1.8.1=pyhd8ed1ab_0
@@ -135,10 +159,13 @@ dependencies:
   - wheel=0.35.1=pyh9f0ad1d_0
   - win_inet_pton=1.1.0=pyhd8ed1ab_6
   - wrapt=1.11.2=py37h4ab8f01_1
+  - xz=5.2.6=h8d14728_0
+  - yaml=0.2.5=h8ffe710_2
   - yarl=1.7.2=py37hcc03f2d_2
   - zeromq=4.3.4=h0e60522_1
   - zipp=3.15.0=pyhd8ed1ab_0
   - zlib=1.2.13=hcfcfb64_4
+  - zstd=1.5.2=h12be248_6
   - pip:
       - altair==4.2.2
       - backports-zoneinfo==0.2.1
@@ -154,7 +181,6 @@ dependencies:
       - markdown-it-py==2.2.0
       - markupsafe==2.1.2
       - mdurl==0.1.2
-      - mtcnn==0.1.1
       - opencv-python==4.7.0.72
       - pandas==1.3.5
       - pillow==9.5.0
