--- a/environment.yml
+++ b/environment.yml
@@ -3,203 +3,10 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _tflow_select=2.2.0=eigen
-  - abseil-cpp=20210324.2=h0e60522_0
-  - absl-py=1.4.0=pyhd8ed1ab_0
-  - aiohttp=3.8.3=py37h51bd9d9_0
-  - aiosignal=1.3.1=pyhd8ed1ab_0
-  - astor=0.8.1=pyh9f0ad1d_0
-  - astunparse=1.6.3=pyhd8ed1ab_0
-  - async-timeout=4.0.2=pyhd8ed1ab_0
-  - asynctest=0.13.0=py_0
-  - attrs=22.2.0=pyh71513ae_0
-  - autopep8=1.6.0=pyhd3eb1b0_1
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - backports=1.0=pyhd8ed1ab_3
-  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-  - blinker=1.6.1=pyhd8ed1ab_0
-  - brotlipy=0.7.0=py37hcc03f2d_1004
-  - bzip2=1.0.8=h8ffe710_4
-  - ca-certificates=2022.12.7=h5b45459_0
-  - cached-property=1.5.2=hd8ed1ab_1
-  - cached_property=1.5.2=pyha770c72_1
-  - certifi=2022.12.7=pyhd8ed1ab_0
-  - cffi=1.15.1=py37ha95fbe2_1
-  - click=8.1.3=py37h03978a9_0
-  - colorama=0.4.6=pyhd8ed1ab_0
-  - cryptography=38.0.2=py37h7375b12_1
-  - debugpy=1.6.3=py37hf2a7229_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - eigen=3.4.0=h2d74725_0
-  - entrypoints=0.4=pyhd8ed1ab_0
-  - flatbuffers=23.3.3=h63175ca_0
-  - frozenlist=1.3.1=py37hcc03f2d_0
-  - gast=0.4.0=pyh9f0ad1d_0
-  - gettext=0.21.1=h5728263_0
-  - giflib=5.2.1=h64bf75a_3
-  - glib=2.74.1=h12be248_1
-  - glib-tools=2.74.1=h12be248_1
-  - google-auth=1.35.0=pyh6c4a22f_0
-  - google-auth-oauthlib=0.4.6=pyhd8ed1ab_0
-  - google-pasta=0.2.0=pyh8c360ce_0
-  - grpcio=1.42.0=py37hc60d5dd_0
-  - gst-plugins-base=1.18.5=h9e645db_0
-  - gstreamer=1.18.5=hd78058f_0
-  - h5py=3.7.0=nompi_py37h24adfc3_101
-  - hdf5=1.12.2=nompi_h2a0e4a3_101
-  - icu=58.2=ha925a31_3
-  - idna=3.4=pyhd8ed1ab_0
-  - importlib-metadata=4.11.4=py37h03978a9_0
-  - intel-openmp=2023.0.0=h57928b3_25922
-  - ipykernel=6.16.2=pyh025b116_0
-  - ipython=7.33.0=py37h03978a9_0
-  - jedi=0.18.2=pyhd8ed1ab_0
-  - jpeg=9e=hcfcfb64_3
-  - jupyter_client=7.4.9=pyhd8ed1ab_0
-  - jupyter_core=4.11.1=py37h03978a9_0
-  - keras-applications=1.0.8=py_1
-  - keras-preprocessing=1.1.2=pyhd8ed1ab_0
-  - krb5=1.20.1=h6609f42_0
-  - lerc=4.0.0=h63175ca_0
-  - libaec=1.0.6=h63175ca_1
-  - libblas=3.9.0=16_win64_mkl
-  - libcblas=3.9.0=16_win64_mkl
-  - libclang=12.0.0=default_h627e005_2
-  - libcurl=7.88.1=h68f0423_1
-  - libdeflate=1.17=hcfcfb64_0
-  - libffi=3.4.2=h8ffe710_5
-  - libglib=2.74.1=he8f3873_1
-  - libiconv=1.17=h8ffe710_0
-  - liblapack=3.9.0=16_win64_mkl
-  - libogg=1.3.4=h8ffe710_1
-  - libpng=1.6.39=h19919ed_0
-  - libprotobuf=3.20.3=h12be248_0
-  - libsodium=1.0.18=h8d14728_1
-  - libsqlite=3.40.0=hcfcfb64_0
-  - libssh2=1.10.0=h680486a_3
-  - libtiff=4.5.0=hf8721a0_2
-  - libvorbis=1.3.7=h0e60522_0
-  - libwebp=1.2.4=hbc33d0d_1
-  - libwebp-base=1.2.4=h2bbff1b_1
-  - libxml2=2.9.14=hc3477c8_4
-  - libxslt=1.1.35=h2bbff1b_0
-  - libzlib=1.2.13=hcfcfb64_4
-  - m2w64-gcc-libgfortran=5.3.0=6
-  - m2w64-gcc-libs=5.3.0=7
-  - m2w64-gcc-libs-core=5.3.0=7
-  - m2w64-gmp=6.1.0=2
-  - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-  - markdown=3.4.3=pyhd8ed1ab_0
-  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
-  - mkl=2022.1.0=h6a75c08_874
-  - msys2-conda-epoch=20160418=1
-  - mtcnn=0.1.1=pyhd8ed1ab_0
-  - multidict=6.0.2=py37hcc03f2d_1
-  - nest-asyncio=1.5.6=pyhd8ed1ab_0
-  - numpy=1.21.6=py37h2830a78_0
-  - oauthlib=3.2.2=pyhd8ed1ab_0
-  - opencv=4.6.0=py37h104de81_2
-  - openssl=1.1.1t=hcfcfb64_0
-  - opt_einsum=3.3.0=pyhd8ed1ab_1
-  - packaging=23.0=pyhd8ed1ab_0
-  - parso=0.8.3=pyhd8ed1ab_0
-  - pcre2=10.40=h17e33f8_0
-  - pickleshare=0.7.5=py_1003
-  - pip=23.0.1=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.38=pyha770c72_0
-  - protobuf=3.20.3=py37hd77b12b_0
-  - psutil=5.9.3=py37h51bd9d9_0
-  - pthreads-win32=2.9.1=hfa6e2cd_3
-  - pyasn1=0.4.8=py_0
-  - pyasn1-modules=0.2.7=py_0
-  - pycodestyle=2.10.0=py37haa95532_0
-  - pycparser=2.21=pyhd8ed1ab_0
-  - pygments=2.15.0=pyhd8ed1ab_0
-  - pyjwt=2.6.0=pyhd8ed1ab_0
-  - pyopenssl=23.1.1=pyhd8ed1ab_0
-  - pysocks=1.7.1=py37h03978a9_5
-  - python=3.7.12=h7840368_100_cpython
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python-flatbuffers=23.1.21=pyhd8ed1ab_0
-  - python_abi=3.7=3_cp37m
-  - pyu2f=0.1.5=pyhd8ed1ab_0
-  - pywin32=303=py37hcc03f2d_0
-  - pyyaml=6.0=py37hcc03f2d_4
-  - pyzmq=24.0.1=py37h7347f05_0
-  - qt-main=5.15.2=he8e5bd7_7
-  - qt-webengine=5.15.9=hb9a9bb5_5
-  - qtwebkit=5.212=h3ad3cdb_4
-  - requests=2.28.2=pyhd8ed1ab_1
-  - requests-oauthlib=1.3.1=pyhd8ed1ab_0
-  - rsa=4.9=pyhd8ed1ab_0
-  - scipy=1.7.3=py37hb6553fb_0
-  - setuptools=67.6.1=pyhd8ed1ab_0
-  - six=1.16.0=pyh6c4a22f_0
-  - snappy=1.1.10=hfb803bf_0
-  - sqlite=3.40.0=hcfcfb64_0
-  - tbb=2021.8.0=h59b6b97_0
-  - tensorboard=2.10.0=py37haa95532_0
-  - tensorboard-data-server=0.6.0=py37h03978a9_2
-  - tensorboard-plugin-wit=1.8.1=pyhd8ed1ab_0
-  - tensorflow=2.10.0=eigen_py37h0b514e4_0
-  - tensorflow-base=2.10.0=eigen_py37he3c91d7_0
-  - tensorflow-estimator=2.10.0=py37haa95532_0
-  - termcolor=2.2.0=pyhd8ed1ab_0
-  - toml=0.10.2=pyhd3eb1b0_0
-  - tornado=6.2=py37hcc03f2d_0
-  - traitlets=5.9.0=pyhd8ed1ab_0
-  - typing-extensions=4.5.0=hd8ed1ab_0
-  - typing_extensions=4.5.0=pyha770c72_0
-  - ucrt=10.0.22621.0=h57928b3_0
-  - urllib3=1.26.15=pyhd8ed1ab_0
-  - vc=14.3=hb6edc58_10
-  - vs2015_runtime=14.34.31931=h4c5c07a_10
-  - wcwidth=0.2.6=pyhd8ed1ab_0
-  - werkzeug=2.1.2=pyhd8ed1ab_1
-  - wheel=0.35.1=pyh9f0ad1d_0
-  - win_inet_pton=1.1.0=pyhd8ed1ab_6
-  - wrapt=1.11.2=py37h4ab8f01_1
-  - xz=5.2.6=h8d14728_0
-  - yaml=0.2.5=h8ffe710_2
-  - yarl=1.7.2=py37hcc03f2d_2
-  - zeromq=4.3.4=h0e60522_1
-  - zipp=3.15.0=pyhd8ed1ab_0
-  - zlib=1.2.13=hcfcfb64_4
-  - zstd=1.5.2=h12be248_6
+  - python>=3.10
+  - scikit-learn=1.0.2
+  - pip>=21.0
   - pip:
-      - altair==4.2.2
-      - backports-zoneinfo==0.2.1
-      - cachetools==5.3.0
-      - charset-normalizer==3.1.0
-      - gitdb==4.0.10
-      - gitpython==3.1.31
-      - importlib-resources==5.12.0
-      - jinja2==3.1.2
-      - joblib==1.2.0
-      - jsonschema==4.17.3
-      - keras==2.11.0
-      - markdown-it-py==2.2.0
-      - markupsafe==2.1.2
-      - mdurl==0.1.2
-      - opencv-python==4.7.0.72
-      - pandas==1.3.5
-      - pillow==9.5.0
-      - pip-chill==1.0.1
-      - pkgutil-resolve-name==1.3.10
-      - pyarrow==11.0.0
-      - pydeck==0.8.0
-      - pympler==1.0.1
-      - pyrsistent==0.19.3
-      - pytz==2023.3
-      - pytz-deprecation-shim==0.1.0.post0
-      - rich==13.3.3
-      - scikit-learn==1.0.2
-      - smmap==5.0.0
-      - streamlit==1.21.0
-      - threadpoolctl==3.1.0
-      - toolz==0.12.0
-      - tzdata==2023.3
-      - tzlocal==4.3
-      - validators==0.20.0
-      - watchdog==3.0.0
-prefix: C:\Users\Redloaded\miniconda3\envs\face-classifier
+    - mtcnn==0.1.1
+    - tensorflow==2.10.0
+    
