--- a/environment.yml
+++ b/environment.yml
@@ -3,11 +3,10 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python>=3.8
+  - python==3.10
   - scikit-learn
-  - pip
   - pip:
-    - mtcnn
+    - mtcnn==0.1.1
     - tensorflow==2.10.0
     - streamlit
     
